Add functions to generate annual report aux tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,14 @@
 
 export(add_loggers_from_startup)
 export(append_encounter_data)
+export(create_appendix_table)
+export(export_appendix_table_excel)
+export(field_plan_check_locations)
+export(field_plan_combine_locations)
 export(get_all_locations)
+export(get_clean_field_plan)
+export(get_field_plan)
+export(get_history_table)
 export(get_master_import_path)
 export(get_startup_paths)
 export(get_unfinished_session)
@@ -17,7 +24,14 @@ export(set_comments)
 export(set_master_startup_value)
 export(set_sea_track_folder)
 export(start_logging)
+import(dplyr)
+import(flextable)
 import(logger)
+importFrom(flexlsx,wb_add_flextable)
+importFrom(openxlsx2,int2col)
+importFrom(openxlsx2,wb_set_col_widths)
+importFrom(openxlsx2,wb_set_row_heights)
+importFrom(openxlsx2,wb_workbook)
 importFrom(readxl,read_excel)
 importFrom(tibble,tibble)
 importFrom(utils,capture.output)
