--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,23 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-Imports: 
+Imports:
+    flexlsx,
+    dplyr,
+    sf,
     logger,
     readxl,
     openxlsx2,
-    tibble
+    tibble,
+    DBI,
+    seatrackR,
+    tidyr,
+    flextable
 Suggests: 
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
+Remotes:
+    ninanor/seatrack-db/seatrackR
 VignetteBuilder: knitr
 Config/testthat/edition: 3
