Organise documentation better

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ export(field_plan_combine_locations)
 export(get_all_locations)
 export(get_clean_field_plan)
 export(get_field_plan)
-export(get_history_table)
 export(get_master_import_path)
 export(get_startup_paths)
 export(get_unfinished_session)
 export(handle_partner_metadata)
 export(handle_returned_loggers)
+export(load_master_import)
 export(load_nonresponsive)
 export(load_partner_metadata)
 export(load_sheets_as_list)
