--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_startup_paths)
 export(get_unfinished_session)
 export(handle_partner_metadata)
 export(handle_returned_loggers)
+export(load_all_master_import)
 export(load_master_import)
 export(load_nonresponsive)
 export(load_partner_metadata)
@@ -27,6 +28,7 @@ export(start_logging)
 import(dplyr)
 import(flextable)
 import(logger)
+importFrom(cellranger,cell_cols)
 importFrom(flexlsx,wb_add_flextable)
 importFrom(openxlsx2,int2col)
 importFrom(openxlsx2,wb_set_col_widths)
