Add some new functions to the documentation

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -23,6 +23,10 @@ reference:
     desc: Functions to load and update encounter data
     contents:
       - has_concept("encounters")
+  - subtitle: Logger metadata functions
+    desc: Functions to load logger data
+    contents:
+      - has_concept("loggers")
   - title: Field planning sheet functions
     desc: Functions to load and handle data from the field planning sheet
     contents:
