--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(field_plan_combine_locations)
 export(get_all_locations)
 export(get_clean_field_plan)
 export(get_field_plan)
+export(get_location_unprocessed)
 export(get_master_import_path)
 export(get_startup_paths)
 export(get_unfinished_session)
