Reorganise structure, remember seatrack path

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(push_master_import_file_to_db)
 export(push_retrievals)
 export(push_shutdowns)
 export(push_startup)
+export(save_all_modified)
 export(save_master_sheet)
 export(save_nonresponsive)
 export(set_comments)
