initial steps on UI

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,11 @@ Imports:
     tidyr,
     flextable,
     cellranger,
-    glue
+    glue,
+    shiny,
+    shinyFiles,
+    fs,
+    shinybusy
 Suggests: 
     knitr,
     rmarkdown,
