--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,12 @@ export(get_location_unprocessed)
 export(get_master_import_path)
 export(get_startup_paths)
 export(get_unfinished_session)
+export(gls_metadata)
+export(gls_prepare_calibration)
+export(gls_prepare_file_upload)
+export(gls_prepare_folder_upload)
+export(gls_seatrack_calibration)
+export(gls_seatrack_colony_info)
 export(handle_partner_metadata)
 export(handle_returned_loggers)
 export(load_all_master_import)
@@ -67,3 +73,4 @@ importFrom(readxl,read_excel)
 importFrom(tibble,tibble)
 importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
+importFrom(utils,read.csv)
