first pass on gls functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,6 @@
 export(DBImportCollection)
 export(LoadedWB)
 export(LoadedWBCollection)
-export(R_df_to_db_values)
-export(R_value_to_db_value)
 export(SessionBatch)
 export(add_loggers_from_startup)
 export(append_encounter_data)
@@ -24,12 +22,14 @@ export(get_clean_field_plan)
 export(get_field_plan)
 export(get_location_unprocessed)
 export(get_master_import_path)
+export(get_raw_data_prev_session)
 export(get_startup_paths)
 export(get_unfinished_session)
 export(gls_metadata)
 export(gls_prepare_calibration)
 export(gls_prepare_file_upload)
 export(gls_prepare_folder_upload)
+export(gls_process_positions)
 export(gls_seatrack_calibration)
 export(gls_seatrack_colony_info)
 export(handle_partner_metadata)
