Improve GLS workflows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(get_master_import_path)
 export(get_raw_data_prev_session)
 export(get_startup_paths)
 export(get_unfinished_session)
+export(gls_calibrate_all)
+export(gls_calibrate_species_colony)
 export(gls_metadata)
 export(gls_prepare_calibration)
 export(gls_prepare_file_upload)
